Create the Login and Logout to the Website

--- a/Website/Store/templates/Logout.html
+++ b/Website/Store/templates/Logout.html
@@ -3,7 +3,6 @@
 
 {% block content %}
 
-    <!-- Header-->
 
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
@@ -13,11 +12,8 @@
                 </div>
             </div>
         </header>
-<br/><br/><br/><br/><br/><br/>
+
+<p>Hi this page is Logout website</p>
 
 
-
-
-
-<br/><br/><br/><br/><br/><br/>
 {% endblock %}
