--- a/Website/Store/templates/Category.html
+++ b/Website/Store/templates/Category.html
@@ -11,8 +11,8 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">ss</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">Hi</p>
+                    <h1 class="display-4 fw-bolder">{{ Category }}</h1>
+                    <p class="lead fw-normal text-white-50 mb-0 mt-4">به بخش {{ Category }} خوش آمدید</p>
                 </div>
             </div>
         </header>
