--- a/Website/Store/templates/navbar.html
+++ b/Website/Store/templates/navbar.html
@@ -1,7 +1,7 @@
   <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Fahim Shop</a>
+                <a class="navbar-brand" href="/">Fahim Shop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -37,7 +37,7 @@
         </div>
 
 
-                    <form class="d-flex">
+                    <form class="d-flex" action="/Cart/">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
