--- a/Website/Store/templates/base.html
+++ b/Website/Store/templates/base.html
@@ -1,8 +1,5 @@
 {% load static %}
 {% load humanize %}
-
-
-<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -45,6 +42,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="{% static 'js/jquery.js' %}"></script>
+        <script src="{% static 'js/scripts.js' %}"></script>
     </body>
 </html>
