--- a/Website/Store/templates/Product.html
+++ b/Website/Store/templates/Product.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
-{% load humanize %}
 {% load static %}
+{% load humanize %}
+
 
 {% block content %}
 
@@ -27,8 +28,7 @@
                         از تخفیف</h6>
 
                     <ins>
-                        <h6 class="text-center " style="color: white ; font-weight: bold">{{ item.sale_price | intcomma
-                            }} : بعد از تخفیف</h6>
+                        <h6 class="text-center " style="color: white ; font-weight: bold">{{ item.sale_price | intcomma }} : بعد از تخفیف</h6>
                     </ins>
                     {% else %}
                     <hr />
