Create The Page of Change Profile and Change Password

--- a/Website/Store/templates/Home.html
+++ b/Website/Store/templates/Home.html
@@ -12,8 +12,8 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">My Products in Fahim Shop</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">WellCome to the My Shop.</p>
+                    <h1 class="display-4 fw-bolder">Hi Man/Woman &#128516;</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">WellCome to the Fahim Shop.</p>
                 </div>
             </div>
         </header>
