--- a/Website/Store/templates/base.html
+++ b/Website/Store/templates/base.html
@@ -24,16 +24,15 @@
 
     {% if messages %}
         {% for message in messages %}
-            <div class="alert alert-warning alert-dismissible">
-                  <button type="button" class="close"data-dismiss="alert">&times;</button>
-                    {{ message }}
+            <div class="alert alert-secondary alert-dismissible " dir="rtl">
+                  <button type="button" class="close"  style="color: black ;position: relative ; float: left ; padding-top: 5px;" data-dismiss="alert">&times;</button>
+                    <p class="text-right" style="color: black ; position: relative ; top: 5px;">{{ message }}</p>
             </div>
         {% endfor %}
     {% endif %}
 
     {% block content %}
     {% endblock %}
-
 
     <!-- Footer-->
         <footer class="py-5 bg-dark">
