Create The Search Page

--- a/Website/Store/templates/Update_info.html
+++ b/Website/Store/templates/Update_info.html
@@ -21,6 +21,9 @@
     <br/><br/>
     <button type="submit" class="btn btn-secondary">
          Save The Changed
+    </button>    <button type="submit" class="btn btn-danger">
+            <a href="/" style="text-decoration: none ; color: black"> Come To Back</a>
+
     </button>
 
 
