Cart Persistense  in Time  Login and Logout

--- a/Website/Cart/templates/Cart_Summary.html
+++ b/Website/Cart/templates/Cart_Summary.html
@@ -100,7 +100,7 @@
     <strong class="float-start" style="font-size: 30px ; margin: 30px;">
     Total :
 </strong>
-    <h3 class="" style=" font-size: 30px ; text-align: center; padding: 30px ; font-weight:700; " >{{ totals|intcomma }} ﷼</h3>
+    <h3 class="" style=" font-size: 30px ; text-align: center; padding: 30px ; font-weight:700; " >{{ totals|intcomma }} تومان</h3>
 </div>
 <hr class="" style=" background-color: blue; height: 5px ; margin-top: 5px ; margin-bottom: 5px ; opacity: 1" />
 
