Fix Shipping Model Problem

--- a/Website/Cart/templates/Cart_Summary.html
+++ b/Website/Cart/templates/Cart_Summary.html
@@ -101,6 +101,8 @@
     Total :
 </strong>
     <h3 class="" style=" font-size: 30px ; text-align: center; padding: 30px ; font-weight:700; " >{{ totals|intcomma }} تومان</h3>
+                <h2 class="text-end mt-5 mr-5 ml-5" style="width: 30px ; height: 30px"><a class="btn btn-success" href="{% url 'Checkout_Payment' %}">Checkout</a></h2>
+
 </div>
 <hr class="" style=" background-color: blue; height: 5px ; margin-top: 5px ; margin-bottom: 5px ; opacity: 1" />
 
